--- a/CarRental/Views/AdminDashboard/Index.cshtml
+++ b/CarRental/Views/AdminDashboard/Index.cshtml
@@ -70,7 +70,7 @@
             <a asp-controller="AdminCar" asp-action="Index" class="btn btn-outline-primary m-2 px-4 btn-hover">
                 <i class="bi bi-car-front"></i> Manage Cars
             </a>
-            <a asp-controller="AdminBooking" asp-action="Create" class="btn btn-outline-warning m-2 px-4 btn-hover">
+            <a asp-controller="AdminBooking" asp-action="Index" class="btn btn-outline-warning m-2 px-4 btn-hover">
                 <i class="bi bi-journal-check"></i> Manage Bookings
             </a>
             <a asp-controller="AdminCustomer" asp-action="CustomerList" class="btn btn-outline-success m-2 px-4 btn-hover">
